Created more components for clean and readable code. created new design for SkillSection and added customised skill tabs dynamically using usable components. completed navbar, Profile and SkillSection. created an object to store the colors to keep the consistency of colors and have choosed for both light and dark theme for future update on theme changing(Currently on dark theme).

--- a/app/globals.css
+++ b/app/globals.css
@@ -70,3 +70,21 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+html::-webkit-scrollbar {
+  width: 8px;
+  transition: 0.2s ease-in;
+}
+
+html::-webkit-scrollbar-track {
+  background-color: #353535;
+}
+
+html::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 10px;
+}
+
+html::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
