--- a/app/globals.css
+++ b/app/globals.css
@@ -93,3 +93,7 @@ html::-webkit-scrollbar-thumb:hover {
 .smooth{
   transition: all 0.1s ease-in-out;
 }
+.no-active-outline-or-border:focus{
+    outline: none;
+    border: none;
+}
