--- a/app/globals.css
+++ b/app/globals.css
@@ -70,7 +70,7 @@ body {
     @apply bg-background text-foreground;
   }
 }
-html{
+html {
   overflow-x: hidden;
 }
 html::-webkit-scrollbar {
@@ -90,10 +90,13 @@ html::-webkit-scrollbar-thumb {
 html::-webkit-scrollbar-thumb:hover {
   background-color: #555;
 }
-.smooth{
+.smooth {
   transition: all 0.1s ease-in-out;
 }
-.no-active-outline-or-border:focus{
-    outline: none;
-    border: none;
+.no-active-outline-or-border:focus {
+  outline: none;
+  border: none;
+}
+.minibar-shadow {
+  box-shadow: 2px 2px 2px rgb(0, 0, 0), -2px, -2px 2px rgb(0, 0, 0);
 }
